--- a/protected/view/navbar.html
+++ b/protected/view/navbar.html
@@ -28,7 +28,7 @@
                         <{if $is_judge}>
                             <a class="dropdown-item" href="/Reimbursement/approval">开始审批</a>
                         <{/if}>
-                        <{if $allow_judge||$isadmin}>
+                        <{if $is_judge||$isadmin}>
                             <a class="dropdown-item" href="/Reimbursement/Stat">统计</a>
                         <{/if}>
                         <{if $is_admin}>
