稍微修改了数据库结构，添加了一些重写规则以便访问新添加的功能，完善了用户修改资料的功能，完成了审批项目的功能，以及编辑项目的大部分内容，稍微修改了一些UI使得界面可以直视

--- a/protected/view/account_editprofile.html
+++ b/protected/view/account_editprofile.html
@@ -17,6 +17,11 @@
                 <{$err_info}>
             </div>
             <{/if}>
+            <{if isset($success_info)}>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <{$success_info}>
+            </div>
+            <{/if}>
             <div class="row">
                 <div class="text-center col-xs-12 col-sm-12 col-md-6 col-lg-5">
                     <{if isset($portrait)}> 
