--- a/protected/view/admin_index.html
+++ b/protected/view/admin_index.html
@@ -2,6 +2,9 @@
 tr{
     cursor: pointer;
 }
+table{
+    display: table!important;
+}
 </style>
 <div class="container">
     <h3>报销系统 - 管理</h3><br>
