--- a/protected/view/layout.html
+++ b/protected/view/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
@@ -29,7 +29,6 @@
     <script>
         $(document).ready(function () { $('body').bootstrapMaterialDesign(); });
     </script>
-        
 </body>
 
 </html>
